force-app/main/default/objects/AnimalMedicine__c/AnimalMedicine__c.object-meta.xml
<CustomObject>
    <label>AnimalMedicine</label>
    <nameField>
        <label>AnimalVisit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnimalsMedicines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>