force-app/main/default/objects/AnimalMedicine__c/fields/Dosen__c.field-meta.xml
<CustomField>
    <fullName>Dosen__c</fullName>
    <label>Dosen</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>