force-app/main/default/objects/AnimalMedicine__c/fields/Dozen__c.field-meta.xml
<CustomField>
    <fullName>Dozen__c</fullName>
    <label>Dozen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>