force-app/main/default/objects/AnimalMedicine__c/fields/End_date_of_application__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_application__c</fullName>
    <label>End date of application</label>
    <type>Date</type>
</CustomField>