force-app/main/default/objects/AnimalMedicine__c/fields/Start_date_of_application__c.field-meta.xml
<CustomField>
    <fullName>Start_date_of_application__c</fullName>
    <label>Start date of application</label>
    <type>Date</type>
</CustomField>